# financial_calc

./: pyproject.toml
financial_calc/: calculator.py
tests/: test_calculator.py
